<resources>
    <string name="app_name">Library Reservation App</string>
    <string name="get_started_text">Welcome to Chapter Library!\nEnjoy endless stories and knowledge with us.</string>
    <string name="get_started">Get Started</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="address">Email Address</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="library_image">Library Image</string>
    <string name="enter_book_name">Enter book name</string>
    <string name="reserve">Reserve</string>
    <string name="nav_menu">Navigation Menu</string>
    <string name="your_reserved_books">Your Reserved Books</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_all_reservations">Cancel All Reservations</string>
    <string name="back">Back</string>
    <string name="create_account">Create Account</string>
    <string name="signup_call"><b>Sign Up for Chapter Library</b></string>
    <string name="create_account_motto">Create your account to join us and discover your next favorite book today.</string>
    <string name="about_title"><b>About Chapter Library</b></string>
    <string name="about_info">Chapter Library App promotes a love for reading.\nOur library is a welcoming space to explore books.\n\nWe’re open Monday to Friday, 9 AM to 6 PM, and Saturday, 10 AM to 4 PM.\n\nWhether you’re searching for your next read or need a quiet place,we’re here to support your literary journey.</string>
    <string name="contacts_title">Contact Us</string>
    <string name="contact_info">Phone: +44 20 7946 0958\nEmail: hello@chapterlibrary.eu\n\nWe’re excited to hear from you and to assist with your Chapter Library experience!</string>
    <string name="menu_title">Menu</string>
    <string name="invitation_text">Write Your Next Great Read!</string>
    <string name="hint_book_name">Enter book name</string>
    <string name="hint_book_ID">Enter ID</string>
    <string name="btn_insert">Reserve</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Cancel</string>
    <string name="btn_viewall">View All</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_reserved_books">Reserved Books</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_delivery">Delivery</string>
    <string name="title_reserved_books">Reserved Books</string>
    <string name="details_text"><b>Delivery Information</b></string>
    <string name="my_name">Your Name</string>
    <string name="city">City</string>
    <string name="home_address">Home Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="done_button">Done</string>
    <string name="delivery_image_desc">Delivery</string>
    <string name="your_books"><b>Your Books</b></string>
    <string name="delivery_complete_text"><b>Delivery Complete</b></string>
    <string name="delivery_complete_text1">Your reservation is complete and will be delivered in 3-5 days. You can enjoy your books for 1 month.</string>
    <string name="go_home_button">Go Home</string>
</resources>
