<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background">

    <!-- Butoni për kthim prapa -->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:onClick="onBackButtonClick"/>

    <!-- LinearLayout që përmban të gjitha elementet tjera në qëndër -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:layout_centerInParent="true">

        <!-- Tekst për detaje -->
        <TextView
            android:id="@+id/details_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/details_text"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <!-- EditText për emrin -->
        <EditText
            android:id="@+id/name"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="id"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@android:color/white"
            android:hint="@string/my_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darker_blue" />

        <!-- EditText për qytetin -->
        <EditText
            android:id="@+id/city"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="City"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@android:color/white"
            android:hint="@string/city"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darker_blue" />

        <!-- EditText për adresën -->
        <EditText
            android:id="@+id/address"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="home_address"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@android:color/white"
            android:hint="@string/home_address"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darker_blue" />

        <!-- EditText për numrin e telefonit -->
        <EditText
            android:id="@+id/mobile_number"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="mobile_number"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@android:color/white"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darker_blue" />

        <!-- Tekst për librat tuaj -->
        <TextView
            android:id="@+id/your_books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/your_books"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <!-- ListView për librat e rezervuar -->
        <ListView
            android:id="@+id/reserved_books_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_text"
            android:layout_marginTop="20dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            android:padding="16dp"/>

        <!-- Butoni për përfundim -->
        <Button
            android:id="@+id/done_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/done_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:minWidth="200dp"
            android:minHeight="56dp"
            android:onClick="onDoneButtonClick"/>
    </LinearLayout>
</RelativeLayout>
