<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/layout_background">

    <!-- ImageView për logon e aplikacionit -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:contentDescription="@string/library_image"
        android:src="@drawable/logo"
        app:srcCompat="@drawable/logo" />

    <!-- TextView që shfaq mesazhin për fillimin e përdorimit të aplikacionit -->
    <TextView
        android:id="@+id/get_started_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/get_started_text"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <!-- Button për të filluar përdorimin e aplikacionit -->
    <Button
        android:id="@+id/get_started_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:minWidth="200dp"
        android:minHeight="56dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
